Corrijo formato y checkeo con diagrama